test/libsolidity/syntaxTests/nameAndTypeResolution/interface_structs.sol
interface I {
    struct A {
    }
}
// ----
// Warning: (18-34): Defining empty structs is deprecated.
// TypeError: (18-34): Structs cannot be defined in interfaces.
